--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -16,6 +16,7 @@
   width: 100%;
   height: 80vh;
   filter: brightness(0.4);
+  object-fit: cover;
 }
 .textof_slider_home {
   position: absolute;
